--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.0.7",
     "tailwindcss": "^3.3.3"
